<resources>
    <string name="app_name">Psy-Tool</string>
    <string name="header_text">Psychometrics assistant</string>
    <string name="info">Information</string>
    <string name="about">About the app</string>
    <string name="exit">Exit</string>
    <string name="title_activity_stoper">Stopwatch</string>
    <string name="title_activity_timer">Timer</string>
    <string name="title_activity_calc">Calculator</string>
    <string name="but1_text">Stopwatch</string>
    <string name="but2_text">Timer</string>
    <string name="but3_text">Calculator</string>
    <string name="but4_text">Standard scales</string>

    <string name="start_time">00:00:00</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="title">Stopwatch</string>

    <string name="alarm_onoff">alarm</string>
    <string name="volume_text">ALARM VOLUME</string>

    <string name="title_activity_calculator">Calculator</string>
    <string name="text_below_message1">Mean (M) and standard deviation (SD)\nEnter your data e.g.: 2.5;23;5.06 ...</string>
    <string name="text_below_message2">Cohen\'s d (effect size)\nEnter your data as: M1; SD1; M2; SD2</string>
    <string name="text_below_message3">r (effect size)\nEnter your data as: Z; N1; N2</string>
    <string name="text_below_message4">η2 (effect size)\nEnter your data as: t; N1; N2</string>
    <string name="text_below_error">ERROR</string>
    <string name="text_default">Long click on "C" clears the display</string>
    <string name="no_es">No effect</string>
    <string name="sm_es">Small effect</string>
    <string name="mod_es">Moderate effect</string>
    <string name="lar_es">Large effect</string>

    <string name="title_activity_norm">Standard scales</string>
    <string name="z_text">z score</string>
    <string name="apply_text">Apply</string>
    <string-array name="name_s">
        <item>SD/z</item>
        <item>P</item>
        <item>T</item>
        <item>Sten</item>
        <item>Stanine</item>
        <item>IQ</item>
        <item>SS</item>
    </string-array>

    <string-array name="interpr_lez">
        <item>Retarded</item>
        <item>Borderline</item>
        <item>Low average</item>
        <item>Average</item>
        <item>High average</item>
        <item>Superior</item>
        <item>Very superior</item>
    </string-array>

    <string-array name="interpr_wan">
        <item>Severe deficit</item>
        <item>Moderate deficit</item>
        <item>Mild deficit</item>
        <item>Low average</item>
        <item>Average</item>
        <item>High average</item>
        <item>Superior</item>
        <item>Very superior</item>
        <item>Exceptional</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="info_text"><b>Psy-Tool</b> is a free (no ads) “tool box” app useful in everyday psychological assessment. Simple stopwatch and timer with big buttons, a calculator with an option of basic statistics estimation (arithmetic mean, standard deviation, effect size), and a standard scales interpretation/converter helper is a tiny but handy tool in your pocket, ready to use.\nThis is the first, far from flawless, version of the app. Hence, if you have any comments regarding its design, functions or anything else, just send me a message (lesniak@neurony.org). I will fix what I can in order to make you a happy user.\nMarcin Lesniak and Neurony.org\n\nCredits\nSound effects used in this app come from the site: www.freesfx.co.uk</string>
    <string name="info_text1"><b>Statistical functions</b> (activated by STAT button) include:\n\n1. Calculation of arithmetic mean (M) and standard deviation (SD)\n- enter your data (min. 5 numbers) separated by “;”\n\n2. Calculation of Cohen’s d (effect size)\n- enter your data as: M of group 1 ; SD of group 1 ; M of group 2 ; SD of group 2\n- the program calculates d based on the formula: (M2 – M1)/sqrt((SD2^2 + SD1^2)/2) \n- interpretation: >0.2- small effect, >0.5- moderate effect, >0.8- large effect\n\n3. Calculation of r coefficient (effect size for non-parametric statistics- Wilcoxon, Mann-Whitney)\n- enter your data as: Z value ; number of subjects in group 1 ; number of subjects in group 2\n- the program calculates r based on the formula: Z/sqrt(N1+N2)\n- interpretation: >0.1- small effect, >0.3- moderate effect, >0.5- large effect\n\n4. Calculation of η2 coefficient (effect size for t statistic for independent groups)\n- enter your data as: t value ; number of subjects in group 1 ; number of subjects in group 2\n- the program calculates eta2 based on the formula: t/sqrt(t) + (N1+N2-2)\n- interpretation: >0.01- small effect, >0.06- moderate effect, >0.14- large effect</string>
    <string name="info_text2"><b>Standard scales:</b>\n\nSD- standard deviation\nz- standard score (mean= 0; standard deviation= 1)\nP- percentiles (mean= 50)\nT- transformed scores (mean= 50; standard deviation= 10)\nSten- standard tens score (mean= 5.5; standard deviation= 2)\nStanine- standard nine score (mean= 5; standard deviation= 2)\nIQ- Wechsler intelligence quotient (mean= 100; standard deviation= 15)\nSS- scaled score (mean= 10; standard deviation= 3)\n\nInterpretation:\nAccording to Lezak M., Howieson D., Bigler E., Tranel D. (2012). <i>Neuropsychological Assessment.</i> 5th Ed. Oxford: Oxford University Press:\nVery superior: +2.0 and above\nSuperior: +1.3 to 2.0\nHigh average: +0.6 to 1.3\nAverage: ±0.6\nLow average: -0.6 to -1.3\nBorderline: -1.3 to -2.0\nRetarded: -2.0 and below\n\nAccording to Wanlass R. (2012). <i>The Neuropsychology Toolkit.</i> NY: Springer:\nExceptional: above 3.0\nVery superior: 2.0 to 3.0\nSuperior: 1.0 to 2.0\nHigh average: 0.67 to 1.0 \nAverage: 0.67 to -0.66 \nLow average: -0.67 to 1.0 \nMild deficit: -1.0 to -2.0 \nModerate deficit: -2.0 to -3.0 \nSevere deficit: below -3.0\n\nScores ranging from low average through high average are considered to be within normal limits</string>

</resources>
