<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:configChanges = "orientation"
    android:screenOrientation = "portrait"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.neurony.marcin.psytool.StoperActivity"
    tools:showIn="@layout/activity_stoper"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:background="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_alignParentTop="true" />
    <org.neurony.marcin.psytool.StoperButton
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_states"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/start"
        android:textColor="@color/colorBackground"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="30sp" />
    <Button
        android:id="@+id/reset"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
