<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.neurony.marcin.psytool.TimerActivity"
    tools:showIn="@layout/activity_timer"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:background="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_alignParentTop="true"
        android:enabled="true"
        android:editable="false"
        android:focusable="false"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:onClick="klik_time" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:ems="10"
        android:imeOptions="actionDone"
        android:textColor="#ffffff"
        android:background="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_alignParentTop="true"
        android:maxLength="8"
        android:visibility="invisible"
        android:focusable="true"
        android:onClick="klik_edit"
        android:inputType="number" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/buttonh1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_below="@+id/timer"
        android:layout_toLeftOf="@+id/space"
        android:layout_toStartOf="@+id/space"
        android:onClick="klik_h1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/buttonh2"
        android:layout_below="@+id/buttonh1"
        android:layout_alignLeft="@+id/buttonh1"
        android:layout_alignStart="@+id/buttonh1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:gravity="center"
        android:onClick="klik_h2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/buttonm1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:layout_alignTop="@+id/buttonh1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="klik_m1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/buttonm2"
        android:layout_below="@+id/buttonm1"
        android:layout_alignLeft="@+id/buttonm1"
        android:layout_alignStart="@+id/buttonm1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:gravity="center"
        android:onClick="klik_m2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:id="@+id/buttons1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_alignTop="@+id/space2"
        android:layout_toRightOf="@+id/space2"
        android:layout_toEndOf="@+id/space2"
        android:onClick="klik_s1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:id="@+id/buttons2"
        android:layout_below="@+id/buttons1"
        android:layout_alignLeft="@+id/buttons1"
        android:layout_alignStart="@+id/buttons1"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:textSize="30sp"
        android:gravity="center"
        android:onClick="klik_s2" />

    <org.neurony.marcin.psytool.StoperButton
        android:id="@+id/start1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/buttimer_states"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/start"
        android:textColor="@color/colorBackground"
        android:textStyle="bold"
        android:textSize="30sp"
        android:onClick="klik_start"
        android:focusable="false"
        android:layout_below="@+id/space3"
        android:layout_centerHorizontal="true"
        android:enabled="true" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/alarm"
        style="@android:style/Widget.Button"
        android:src="@drawable/glosnik1"
        android:scaleType="fitCenter"
        android:contentDescription="@string/alarm_onoff"
        android:onClick="klik_alarm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/reset1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="@drawable/butreset_states"
        android:gravity="center"
        android:onClick="klik_reset"
        android:layout_alignBottom="@+id/alarm"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar" />

    <Space
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_above="@+id/buttonh2"
        android:layout_toLeftOf="@+id/buttonm1"
        android:layout_alignTop="@+id/buttonm1"
        android:id="@+id/space" />

    <Space
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_above="@+id/buttonm2"
        android:layout_toRightOf="@+id/buttonm1"
        android:layout_toEndOf="@+id/buttonm1"
        android:layout_alignTop="@+id/buttonm1"
        android:id="@+id/space2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@+id/buttonh2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/space3" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_above="@+id/reset1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="100"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_alignRight="@+id/space3"
        android:layout_alignEnd="@+id/space3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/volume_text"
        android:id="@+id/textVolume"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />
    <!--
        <EditText
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:textColor="#ffffff"
            android:background="@color/colorPrimaryDark1"
            android:textSize="20sp"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/start1"
            android:layout_alignLeft="@+id/buttonh2"
            android:layout_alignStart="@+id/buttonh2"
            android:visibility="invisible" />
    -->

</RelativeLayout>
